--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Bonjour à tous</p>
-    <P>Bienvenue dans LES FLEURS DE LA VIE</P>
+    <P>Flores Vitae</P>
     <script src="assets/script.js"></script>
 </body>
 </html>
